tools/templates/cluster/cluster-wide/kyverno-policies/tests/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: set-expected-role-pod
  namespace: test-namespace
  labels:
    app: test
  annotations:
    iam.amazonaws.com/role: "arn:aws:iam::000000000000:role/expected-role"
spec:
  containers:
    - name: test
      image: nginx:1.7.9
      ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Pod
metadata:
  name: set-unexpected-role-pod
  namespace: test-namespace
  labels:
    app: test
  annotations:
    iam.amazonaws.com/role: "arn:aws:iam::000000000000:role/unexpected-role"
spec:
  containers:
    - name: test
      image: nginx:1.7.9
      ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Pod
metadata:
  name: no-annotation-pod
  namespace: test-namespace
  labels:
    app: test
spec:
  containers:
    - name: test
      image: nginx:1.7.9
      ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Pod
metadata:
  name: any-role-pod
  namespace: star-namespace
  labels:
    app: test
  annotations:
    iam.amazonaws.com/role: "arn:aws:iam::000000000000:role/any-role"
spec:
  containers:
    - name: test
      image: nginx:1.7.9
      ports:
        - containerPort: 80
          name: http
